--- a/index.html
+++ b/index.html
@@ -15,6 +15,89 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light" style="background-color: #74348A">
+</nav>
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Heading Row -->
+    <div class="row align-items-center my-5">
+      
+      <div class="col-lg-6">
+        <h2 class="font-weight-light">Welcome to the RSIMP</h2>
+        <p>Explain the purpose of the registry.</p>
+      </div>
+
+      <div class="col-lg-6">
+        <img class="img-fluid rounded mb-4 mb-lg-0" src="./images" alt="Computer">
+      </div>
+
+    </div>
+    <!-- H Row End -->
+
+    <!-- Text Row -->
+    <div class="card text-white bg-dark my-5 py-4 text-center">
+      <div class="card-body">
+        <p class="text-white m-0">Important information about the Registry.</p>
+      </div>
+    </div>
+    <!-- T Row End -->
+
+    <!-- Content Row -->
+    <div class="row">
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Create an Account</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-outline-dark">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- Col Ends -->
+      <!-- Col Begins -->
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Search the Registry</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-outline-dark">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- Col Ends -->
+      <!-- Col Begins -->
+      <div class="col-md-4 mb-5">
+        <div class="card h-100">
+          <div class="card-body">
+            <h2 class="card-title">Contact Support</h2>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-outline-dark">More Info</a>
+          </div>
+        </div>
+      </div>
+      <!-- Col Ends -->
+
+    </div>
+    <!-- Row Ends -->
+
+  </div>
+  <!-- Container Ends -->
+
+  <!-- Footer -->
+  <footer style="background-color: #74348A">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Paradigm Applications 2020</p>
+    </div>
+  </footer>
+  <!-- F Ends -->
+
 
 </body>
 
