--- a/index.html
+++ b/index.html
@@ -15,6 +15,34 @@
 </head>
 
 <body>
+    <div class="container">
+        <!-- Heading row -->
+        <div class="row align-items-center my-5">
+            <div class="col-6">
+                <h2>Welcome to the RSIMP</h2>
+                <p>Explain the purpose of the registry.</p>
+            </div>
+            <div class="col-6">
+                <img class="img-fluid rounded mb-4 mb-lg-0" src="./images" alt="Computer">
+            </div>
+        </div>
+        <!-- H Row End -->
+
+        <!-- Text Row -->
+        <div class="card text-white bg-secondary my-5 py-4 text-center"></div>
+        <div class="card-body">
+            <p class="text-white m-0">Important information for using the registry.</p>
+        </div>
+        <!-- T Row End -->
+
+        <!-- Content Row -->
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+            <div class="col-4"></div>
+        </div>
+        <!-- C Row End -->
+    </div>
 
 </body>
 
