--- a/index.html
+++ b/index.html
@@ -15,88 +15,107 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light" style="background-color: #74348A">
-</nav>
-<!-- Page Content -->
-<div class="container">
-
-    <!-- Heading Row -->
-    <div class="row align-items-center my-5">
-      
-      <div class="col-lg-6">
-        <h2 class="font-weight-light">Welcome to the RSIMP</h2>
-        <p>Explain the purpose of the registry.</p>
-      </div>
-
-      <div class="col-lg-6">
-        <img class="img-fluid rounded mb-4 mb-lg-0" src="./images" alt="Computer">
-      </div>
-
-    </div>
-    <!-- H Row End -->
-
-    <!-- Text Row -->
-    <div class="card text-white bg-dark my-5 py-4 text-center">
-      <div class="card-body">
-        <p class="text-white m-0">Important information about the Registry.</p>
-      </div>
-    </div>
-    <!-- T Row End -->
-
-    <!-- Content Row -->
-    <div class="row">
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Create an Account</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-outline-dark">More Info</a>
-          </div>
-        </div>
-      </div>
-      <!-- Col Ends -->
-      <!-- Col Begins -->
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Search the Registry</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-outline-dark">More Info</a>
-          </div>
-        </div>
-      </div>
-      <!-- Col Ends -->
-      <!-- Col Begins -->
-      <div class="col-md-4 mb-5">
-        <div class="card h-100">
-          <div class="card-body">
-            <h2 class="card-title">Contact Support</h2>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-outline-dark">More Info</a>
-          </div>
-        </div>
-      </div>
-      <!-- Col Ends -->
-
-    </div>
-    <!-- Row Ends -->
-
-  </div>
-  <!-- Container Ends -->
-
-  <!-- Footer -->
-  <footer style="background-color: #74348A">
+    <nav class="navbar navbar-light" style="background-color: #74348A;">
+        <ul style="list-style: none;">
+            <li>English | Arabic </li>
+            <li><img src="./images/Asset 1.png" alt="SBC"></li>
+        </ul>
+    </nav>
+    <div style="background-color: #1F3E6C; height: 40px"></div>
+    <!-- Page Content -->
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Paradigm Applications 2020</p>
+
+        <!-- Heading Row -->
+        <div class="row align-items-center my-5">
+
+            <div class="col-lg-6">
+                <h1 class="font-italic font-weight-light">Welcome to<h1></h1>
+                    <h1 style="color: #1F3E6C">The Registry of Securing Interests in Movable Property</h1>
+                    <h2 class="font-italic font-weight-light">The Kingdom of Saudi Arabia's electronic collateral
+                        registry.</h2>
+                    <!-- <p>The RSIMP provides the convenient services of searching, registering, and
+                    managing notices of security interest.</p> -->
+            </div>
+
+            <div class="col-lg-6">
+                <img class="img-fluid rounded mb-4 mb-lg-0" src="./images/placeholderMAC.jpg" alt="Computer">
+            </div>
+
+        </div>
+        <!-- H Row End -->
+
+        <!-- Text Row -->
+        <div class="card text-white my-5 py-4 text-center" style="background-color: #1F3E6C">
+            <div class="card-body">
+                <p class="text-white m-0">The RSIMP provides the convenient services of searching, registering, and
+                    managing notices of security interest. Please see below for quick access to the main features. For
+                    more assistance, please view the Help section or the How To Guides accessible in the top navigation
+                    menu.
+                </p>
+            </div>
+        </div>
+        <!-- T Row End -->
+
+        <!-- Content Row -->
+        <div class="row">
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Create an Account</h2>
+                        <p class="card-text">Accounts are free, and are required before registering notices of security
+                            interest
+                            into the RSIMP and to perform a certified search.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#" class="btn btn-outline-dark">Create</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Col Ends -->
+            <!-- Col Begins -->
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Search the Registry</h2>
+                        <p class="card-text">Types of searches include: security provider, vehicle registration number,
+                            notice
+                            registration number, and verification of a certified search.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#" class="btn btn-outline-dark">Search</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Col Ends -->
+            <!-- Col Begins -->
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Contact Support</h2>
+                        <p class="card-text">For questions or advice regarding the use of the registry, please contact
+                            the Saudi Arabia RSIMP Support Team.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#" class="btn btn-outline-dark">Contact</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Col Ends -->
+
+        </div>
+        <!-- Row Ends -->
+
     </div>
-  </footer>
-  <!-- F Ends -->
+    <!-- Container Ends -->
+
+    <!-- Footer -->
+    <footer style="background-color: #74348A">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Paradigm Applications 2020</p>
+            <img src="./images/SA White Logo.png" alt="SBC Symbol">
+        </div>
+    </footer>
+    <!-- F Ends -->
 
 
 </body>
