new page for Arabic translations
copy to add arabic

--- a/bootstap3.html
+++ b/bootstap3.html
@@ -8,7 +8,6 @@
     <title>Registry ReDesign</title>
 
     <!-- Bootstrap 3-->
-    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -20,85 +19,86 @@
             <li>English | Arabic </li>
             <li><img src="./images/Asset 1.png" alt="SBC"></li>
         </ul>
-
     </nav>
-    <div style="background-color: #1F3E6C; height: 40px"></div>
+    <div style="background-color: #2c2a6b; height: 40px"></div>
     <!-- Page Content -->
-
-    <!-- Heading Row -->
-    <div class="row align-items-center my-5">
-        <div class="col-lg-6">
-            <h1 class="font-italic font-weight-light">Welcome to<h1></h1>
-                <h1 style="color: #1F3E6C">The Registry of Securing Interests in Movable Property</h1>
-                <h2 class="font-italic font-weight-light">Saudi Arabia's online site for searching and filing notices of
-                    pledge in movable property
-                </h2>
+    <div class="container">
+        <!-- Heading Row -->
+        <div class="row align-items-center my-5">
+            <div class="col-lg-6">
+                <!-- <h1 class="font-italic font-weight-light">Welcome to<h1></h1> -->
+                    <h1 style="color: #2c2a6b">The Registry of Securing Interests in Movable Property</h1>
+                    <h3>Saudi Arabia's online site for searching and filing
+                        notices of
+                        pledge in movable property
+                    </h3>
+            </div>
+            <div class="col-lg-6">
+                <img class="img-thumbnail" src="./images/SAmonitors.jpg"
+                    alt="Computer">
+            </div>
         </div>
+        <br>
+        <!-- H Row End -->
 
-        <div class="col-lg-6">
-            <img class="img-fluid rounded mb-4 mb-lg-0" src="./images/placeholderMAC.jpg" alt="Computer">
-        </div>
-
-    </div>
-    <!-- H Row End -->
-
-    <!-- Text Row -->
-    <div class="panel panel-primary" style="background-color: #1F3E6C">
-        <div class="panel-body">
-            <p>The RSIMP provides the convenient services of searching, registering, and
-                managing notices of security interest. Please see below for quick access to the main features. For
-                more assistance, please view the Help section or the How To Guides accessible in the top navigation
-                menu.
-            </p>
-        </div>
-    </div>
-    <!-- T Row End -->
-
-    <!-- Content Row -->
-    <div class="row">
-        <div class="col-md-4 mb-5">
-            <div class="panel h-100">
+        <!-- Text Row -->
+        <div class="row align-items-center my-5">
+            <div class="panel" style="background-color: #2c2a6b">
                 <div class="panel-body">
-                    <h2 class="panel-heading">Create an Account</h2>
-                    <p class="panel-body">If you wish to file a notice of security interest on movable property, you
+                    <p style="color: white">The RSIMP provides the convenient services of searching, registering, and
+                        managing notices of security interest. Please see below for quick access to the main features.
+                        For
+                        more assistance, please view the Help section or the How To Guides accessible in the top
+                        navigation
+                        menu.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- T Row End -->
+
+        <!-- Content Row -->
+        <div class="row text-center">
+            <div class="col-md-4 mb-5">
+                <div class="panel panel-primary ">
+                    <h2 class="panel-heading ">Create an Account</h2>
+                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you wish to file a notice of security interest on movable property, you
                         must
-                        have an account. If you would like to apply for an Account, click Create an Account.</p>
-                    <a href="./public/setupaccount.aspx" class="btn btn-outline-dark">Create</a>
+                        have an account.</p>
+                    <button type="button" a href="./public/setupaccount.aspx" class="btn btn-primary center-block"
+                        style="margin-bottom: 5px; color: #2c2a6b">Create</button>
                 </div>
             </div>
-        </div>
-        <!-- Col Ends -->
-        <!-- Col Begins -->
-        <div class="col-md-4 mb-5">
-            <div class="panel h-100">
-                <div class="panel-body">
-                    <h2 class="panel-heading">Public Search</h2>
-                    <p class="panel-body">Anyone can search the registry to verify whether there are any pledges on
-                        movable property. Public searches are free of charge. To access, click Public Search.</p>
+            <!-- Col Ends -->
 
-                    <a href="./str/search.aspx?public=true#!/" class="btn btn-outline-dark">Search</a>
+            <!-- Col Begins -->
+            <div class="col-md-4 mb-5">
+                <div class="panel panel-primary">
+                    <h2 class="panel-heading text-center">Public Search</h2>
+                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">Anyone can search the registry to verify whether there are any pledges on
+                        movable property. Public searches are free of charge.</p>
+                    <button type="button" a href="./str/search.aspx?public=true#!/" class="btn btn-primary center-block"
+                        style="margin-bottom: 5px; color: #2c2a6b">Search</button>
                 </div>
             </div>
-        </div>
-        <!-- Col Ends -->
-        <!-- Col Begins -->
-        <div class="col-md-4 mb-5">
-            <div class="panel h-100">
-                <div class="panel-body">
-                    <h2 class="panel-heading">Contact Support</h2>
-                    <p class="panel-body">If you have any queries regarding the use of the registry or encounter
-                        technical problems connecting to or while using this site, please contact Saudi Arabia RSIMP
+            <!-- Col Ends -->
+
+            <!-- Col Begins -->
+            <div class="col-md-4 mb-5">
+                <div class="panel panel-primary">
+                    <h2 class="panel-heading text-center">Contact Support</h2>
+                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you have any queries regarding the use of the registry or encounter
+                        technical problems connecting to or while using this site, please contact the Saudi Arabia RSIMP
                         Support Team.</p>
-
-
-                    <a href="/public/techsupport.aspx" class="btn btn-outline-dark">Contact</a>
+                    <button type="button" a href="/public/techsupport.aspx" class="btn btn-primary center-block"
+                        style="margin-bottom: 5px; color: #2c2a6b">Contact</a>
                 </div>
             </div>
+            <!-- Col Ends -->
         </div>
-        <!-- Col Ends -->
-
+        <!-- Row Ends -->
     </div>
-    <!-- Row Ends -->
+    <!-- Container Ends -->
 
 
 </body>
