--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
         </ul>
 
     </nav>
-    <div style="background-color: #1F3E6C; height: 40px"></div>
+    <div style="background-color: #2c2a6b; height: 40px"></div>
     <!-- Page Content -->
     <div class="container">
 
         <!-- Heading Row -->
         <div class="row align-items-center my-5">
             <div class="col-lg-6">
-                <h1 class="font-italic font-weight-light">Welcome to<h1></h1>
-                    <h1 style="color: #1F3E6C">The Registry of Securing Interests in Movable Property</h1>
-                    <h2 class="font-italic font-weight-light">The Kingdom of Saudi Arabia's electronic collateral
-                        registry.</h2>
+                <!-- <h1 class="font-italic font-weight-light">Welcome to<h1></h1> -->
+                    <h1 style="color: #2c2a6b">The Registry of Securing Interests in Movable Property</h1>
+                    <h3 style="color:#2c2a6b" class=" font-weight-light">The Kingdom of Saudi Arabia's electronic collateral
+                        registry.</h3>
             </div>
 
             <div class="col-lg-6">
@@ -58,7 +58,7 @@
         <div class="row">
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body" style="color: #2c2a6b">
                         <h2 class="card-title">Create an Account</h2>
                         <p class="card-text">Accounts are free, and are required before registering notices of security
                             interest
@@ -73,7 +73,7 @@
             <!-- Col Begins -->
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body" style="color: #2c2a6b">
                         <h2 class="card-title">Search the Registry</h2>
                         <p class="card-text">Types of searches include: security provider, vehicle registration number,
                             notice
