--- a/bootstap3.html
+++ b/bootstap3.html
@@ -14,28 +14,32 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light" style="background-color: #1F3E6C;">
+    <nav class="navbar navbar-light" style="background-color: white;">
+        <div class="text-right list-inline">
         <ul style="list-style: none;">
-            <li>English | Arabic </li>
-            <li><img src="./images/Asset 1.png" alt="SBC"></li>
+            <li>English | <span style="color: #2c2a6b; text-decoration: underline;">Arabic </span></li>
+            <li><img src="./images/master logo.png" alt="SBC"></li>
         </ul>
+    </div>
+    <div class="text-left">
+        <p>Registry of Securing Interests in Movable Property</p>
+        <p>سجل الحقوق مع الممتلكات المنقولة</p>
+    </div>
     </nav>
     <div style="background-color: #2c2a6b; height: 40px"></div>
     <!-- Page Content -->
     <div class="container">
         <!-- Heading Row -->
         <div class="row align-items-center my-5">
-            <div class="col-lg-6">
-                <!-- <h1 class="font-italic font-weight-light">Welcome to<h1></h1> -->
-                    <h1 style="color: #2c2a6b">The Registry of Securing Interests in Movable Property</h1>
-                    <h3>Saudi Arabia's online site for searching and filing
-                        notices of
-                        pledge in movable property
-                    </h3>
+            <div style="color: #2c2a6b"class="col-lg-6">
+                <h1 >The Registry of Securing Interests in Movable Property</h1>
+                <h3>Saudi Arabia's online site for searching and filing
+                    notices of
+                    pledge in movable property
+                </h3>
             </div>
             <div class="col-lg-6">
-                <img class="img-thumbnail" src="./images/SAmonitors.jpg"
-                    alt="Computer">
+                <img class="img-thumbnail" src="./images/SAmonitors.jpg" alt="Computer">
             </div>
         </div>
         <br>
@@ -45,12 +49,12 @@
         <div class="row align-items-center my-5">
             <div class="panel" style="background-color: #2c2a6b">
                 <div class="panel-body">
-                    <p style="color: white">The RSIMP provides the convenient services of searching, registering, and
-                        managing notices of security interest. Please see below for quick access to the main features.
-                        For
-                        more assistance, please view the Help section or the How To Guides accessible in the top
-                        navigation
-                        menu.
+                    <p style="color: white">This website is where you find the Registry of Securing Interests in Movable
+                        Property (RSIMP). It is where you will register notices of security interest in movable property
+                        (Collateral), and search for existing notices of security interests. In order to register
+                        notices or obtain certified search results, you must first establish an online account with the
+                        Registry of Securing Interests in Movable Property. After submitting the account
+                        application, you will receive an email to verify and activate the account.
                     </p>
                 </div>
             </div>
@@ -60,13 +64,13 @@
         <!-- Content Row -->
         <div class="row text-center">
             <div class="col-md-4 mb-5">
-                <div class="panel panel-primary ">
-                    <h2 class="panel-heading ">Create an Account</h2>
-                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you wish to file a notice of security interest on movable property, you
-                        must
-                        have an account.</p>
-                    <button type="button" a href="./public/setupaccount.aspx" class="btn btn-primary center-block"
-                        style="margin-bottom: 5px; color: #2c2a6b">Create</button>
+                <div class="panel" style="background-color: #2c2a6b1c">
+                    <h2 style="background-color: #2c2a6b; color: white"class="panel-heading ">Create an Account</h2>
+                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">In order to register notices or
+                        obtain certified search results, you must first establish an online account with the Registry of
+                        Securing Interests in Movable Property. </p>
+                    <button type="button" a href="./public/setupaccount.aspx" class="btn center-block"
+                        style="margin-bottom: 5px; background-color: #2c2a6b; color: white">Create</button>
                 </div>
             </div>
             <!-- Col Ends -->
@@ -75,7 +79,8 @@
             <div class="col-md-4 mb-5">
                 <div class="panel panel-primary">
                     <h2 class="panel-heading text-center">Public Search</h2>
-                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">Anyone can search the registry to verify whether there are any pledges on
+                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">Anyone can search the registry to
+                        verify whether there are any pledges on
                         movable property. Public searches are free of charge.</p>
                     <button type="button" a href="./str/search.aspx?public=true#!/" class="btn btn-primary center-block"
                         style="margin-bottom: 5px; color: #2c2a6b">Search</button>
@@ -87,9 +92,10 @@
             <div class="col-md-4 mb-5">
                 <div class="panel panel-primary">
                     <h2 class="panel-heading text-center">Contact Support</h2>
-                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you have any queries regarding the use of the registry or encounter
-                        technical problems connecting to or while using this site, please contact the Saudi Arabia RSIMP
-                        Support Team.</p>
+                    <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you have questions or need help
+                        with navigating the website, you may contact the Tech Support Desk by clicking the Technical
+                        Support link. The Tech Support Desk will review your query and respond within a short time.
+                    </p>
                     <button type="button" a href="/public/techsupport.aspx" class="btn btn-primary center-block"
                         style="margin-bottom: 5px; color: #2c2a6b">Contact</a>
                 </div>
@@ -97,9 +103,15 @@
             <!-- Col Ends -->
         </div>
         <!-- Row Ends -->
+
+        
     </div>
     <!-- Container Ends -->
-
+<!-- Footer Begins -->
+        <footer class="text-right" style="background-color: #2c2a6b;">
+            <img src="./images/SA White Logo.png" alt="SBC White Logo">
+        </footer>
+        <!-- Footer Ends -->
 
 </body>
 
