--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- H Row End -->
 
         <!-- Text Row -->
-        <div class="card text-white my-5 py-4 text-center" style="background-color: #1F3E6C">
+        <div class="card text-white my-5 py-4 text-center" style="background-color: #522e7b">
             <div class="card-body">
                 <p class="text-white m-0">The RSIMP provides the convenient services of searching, registering, and
                     managing notices of security interest. Please see below for quick access to the main features. For
@@ -120,7 +120,13 @@
 
 </html>
 
-
+<!-- Color choices -->
+<!-- #2c2a6b the darkest purple
+#2a498c med purple
+#136db4 blue
+#59529d lavender
+#74348a fuscia (main on brand guidelines)
+#522e7b fig purple-->
 
 
 <!-- Arabic Notes -->
