--- a/bootstap3.html
+++ b/bootstap3.html
@@ -14,25 +14,29 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light" style="background-color: white;">
-        <div class="text-right list-inline">
-        <ul style="list-style: none;">
-            <li>English | <span style="color: #2c2a6b; text-decoration: underline;">Arabic </span></li>
-            <li><img src="./images/master logo.png" alt="SBC"></li>
-        </ul>
-    </div>
-    <div class="text-left">
-        <p>Registry of Securing Interests in Movable Property</p>
-        <p>سجل الحقوق مع الممتلكات المنقولة</p>
-    </div>
+    <nav class="navbar" style="background-color: white;">
+        <p class="pull-right">English | <span style="color: #2c2a6b; text-decoration: underline;">Arabic </span></p>
+        <div>  
+            <ul style="list-style: none;" class="list-inline">
+                <li class="pull-left" style="margin-left: 120px; color: #2c2a6b">
+                    <h2>سجل الحقوق مع الممتلكات المنقولة</h2>
+                    <h2>Registry of Securing Interests in Movable Property</h2>
+                </li>
+                <li class="pull-right"><img src="./images/master logo.png" alt="SBC"></li>
+            </ul>
+        </div>
+        <!-- <div class="text-left list-inline">
+            <h2>سجل الحقوق مع الممتلكات المنقولة</h2>
+            <h2>Registry of Securing Interests in Movable Property</h2>
+        </div> -->
     </nav>
     <div style="background-color: #2c2a6b; height: 40px"></div>
     <!-- Page Content -->
     <div class="container">
         <!-- Heading Row -->
-        <div class="row align-items-center my-5">
-            <div style="color: #2c2a6b"class="col-lg-6">
-                <h1 >The Registry of Securing Interests in Movable Property</h1>
+        <div class="row align-items-center">
+            <div style="color: #2c2a6b" class="col-lg-6">
+                <h1>The Registry of Securing Interests in Movable Property</h1>
                 <h3>Saudi Arabia's online site for searching and filing
                     notices of
                     pledge in movable property
@@ -47,7 +51,7 @@
 
         <!-- Text Row -->
         <div class="row align-items-center my-5">
-            <div class="panel" style="background-color: #2c2a6b">
+            <div class="panel" style="background-color:#2c2a6b">
                 <div class="panel-body">
                     <p style="color: white">This website is where you find the Registry of Securing Interests in Movable
                         Property (RSIMP). It is where you will register notices of security interest in movable property
@@ -64,8 +68,8 @@
         <!-- Content Row -->
         <div class="row text-center">
             <div class="col-md-4 mb-5">
-                <div class="panel" style="background-color: #2c2a6b1c">
-                    <h2 style="background-color: #2c2a6b; color: white"class="panel-heading ">Create an Account</h2>
+                <div class="panel" style="border-color: #2c2a6b;">
+                    <h2 style="background-color: #74348a; color: white" class="panel-heading ">Create an Account</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">In order to register notices or
                         obtain certified search results, you must first establish an online account with the Registry of
                         Securing Interests in Movable Property. </p>
@@ -77,41 +81,40 @@
 
             <!-- Col Begins -->
             <div class="col-md-4 mb-5">
-                <div class="panel panel-primary">
-                    <h2 class="panel-heading text-center">Public Search</h2>
+                <div class="panel" style="border-color: #2c2a6b;">
+                    <h2 style="background-color: #2c2a6b; color: white" class="panel-heading">Public Search</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">Anyone can search the registry to
                         verify whether there are any pledges on
                         movable property. Public searches are free of charge.</p>
-                    <button type="button" a href="./str/search.aspx?public=true#!/" class="btn btn-primary center-block"
-                        style="margin-bottom: 5px; color: #2c2a6b">Search</button>
+                    <button type="button" a href="./str/search.aspx?public=true#!/" class="btn center-block"
+                        style="margin-bottom: 5px; background-color: #2c2a6b; color: white">Search</button>
                 </div>
             </div>
             <!-- Col Ends -->
 
             <!-- Col Begins -->
             <div class="col-md-4 mb-5">
-                <div class="panel panel-primary">
-                    <h2 class="panel-heading text-center">Contact Support</h2>
+                <div class="panel" style="border-color: #2c2a6b;">
+                    <h2 style="background-color: #2c2a6b; color: white" class="panel-heading">Contact Support</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you have questions or need help
-                        with navigating the website, you may contact the Tech Support Desk by clicking the Technical
-                        Support link. The Tech Support Desk will review your query and respond within a short time.
+                        with navigating the website, you may contact the Tech Support Desk. The Tech Support Desk will review your query and respond within a short time.
                     </p>
-                    <button type="button" a href="/public/techsupport.aspx" class="btn btn-primary center-block"
-                        style="margin-bottom: 5px; color: #2c2a6b">Contact</a>
+                    <button type="button" a href="/public/techsupport.aspx" class="btn center-block"
+                        style="margin-bottom: 5px; background-color: #2c2a6b; color: white;">Contact</a>
                 </div>
             </div>
             <!-- Col Ends -->
         </div>
         <!-- Row Ends -->
 
-        
+
     </div>
     <!-- Container Ends -->
-<!-- Footer Begins -->
-        <footer class="text-right" style="background-color: #2c2a6b;">
-            <img src="./images/SA White Logo.png" alt="SBC White Logo">
-        </footer>
-        <!-- Footer Ends -->
+    <!-- Footer Begins -->
+    <footer class="text-right" style="background-color: #2c2a6b;">
+        <img src="./images/Asset 1.png" alt="SBC White Logo">
+    </footer>
+    <!-- Footer Ends -->
 
 </body>
 
