reg name change
removed acronym and updated name

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Text Row -->
         <div class="card text-white my-5 py-4 text-center" style="background-color: #522e7b">
             <div class="card-body">
-                <p class="text-white m-0">The RSIMP provides the convenient services of searching, registering, and
+                <p class="text-white m-0">The Registry of Rights on Movable Property provides the convenient services of searching, registering, and
                     managing notices of security interest. Please see below for quick access to the main features. For
                     more assistance, please view the Help section or the How To Guides accessible in the top navigation
                     menu.
@@ -62,7 +62,7 @@
                         <h2 class="card-title">Create an Account</h2>
                         <p class="card-text">Accounts are free, and are required before registering notices of security
                             interest
-                            into the RSIMP and to perform a certified search.</p>
+                            into the Registry of Rights on Movable Assets and to perform a certified search.</p>
                     </div>
                     <div class="card-footer">
                         <a href="./public/setupaccount.aspx" class="btn btn-outline-dark">Create</a>
@@ -91,7 +91,7 @@
                     <div class="card-body">
                         <h2 class="card-title">Contact Support</h2>
                         <p class="card-text">For questions or advice regarding the use of the registry, please contact
-                            the Saudi Arabia RSIMP Support Team.</p>
+                            the Saudi Arabia Support Team.</p>
                     </div>
                     <div class="card-footer">
                         <a href="/public/techsupport.aspx" class="btn btn-outline-dark">Contact</a>
