--- a/bootstap3.html
+++ b/bootstap3.html
@@ -15,12 +15,13 @@
 
 <body>
     <nav class="navbar" style="background-color: white;">
-        <p class="pull-right">English | <span style="color: #2c2a6b; text-decoration: underline;">Arabic </span></p>
-        <div>  
+        <p class="pull-right" style="margin: 20px">English | <span
+                style="color: #2c2a6b; text-decoration: underline;">Arabic </span></p>
+        <div>
             <ul style="list-style: none;" class="list-inline">
                 <li class="pull-left" style="margin-left: 120px; color: #2c2a6b">
                     <h2>سجل الحقوق مع الممتلكات المنقولة</h2>
-                    <h2>Registry of Securing Interests in Movable Property</h2>
+                    <h2>Registry of Rights on Movable Assets</h2>
                 </li>
                 <li class="pull-right"><img src="./images/master logo.png" alt="SBC"></li>
             </ul>
@@ -30,13 +31,46 @@
             <h2>Registry of Securing Interests in Movable Property</h2>
         </div> -->
     </nav>
-    <div style="background-color: #2c2a6b; height: 40px"></div>
+    <nav class="navbar navbar-default" style="color: white; background-color: #2c2a6b;">
+        <div class="container-fluid ">
+          <div class="collapse navbar-collapse ">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Public Search</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">How To Guides</a></li>
+              <li><a href="#">Law and Regulations</a></li>
+              <li><a href="#">Create Account</a></li>
+              <li><a href="#">Log In</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+
+    <!-- <div style="background-color: #2c2a6b; height: 40px; color: white"> -->
+    
+    <!-- <nav class="navbar">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse align-items-center">
+                <ul style="padding: 10px;" class="nav navbar-nav">
+                    <li>Home</li>
+                    <li>Public Search</li>
+                    <li>Help</li>
+                    <li>How To Guides</li>
+                    <li>Law and Regulations</li>
+                    <li>Create Account</li>
+                    <li>Log In</li>
+                </ul>
+            </div>
+        </div>
+    </nav> -->
+</div>
     <!-- Page Content -->
     <div class="container">
         <!-- Heading Row -->
-        <div class="row align-items-center">
-            <div style="color: #2c2a6b" class="col-lg-6">
-                <h1>The Registry of Securing Interests in Movable Property</h1>
+        <div class="row align-items-center" style="margin-top: 10px">
+            <div style="color: #2c2a6b; margin-top: 50px" class="col-lg-6">
+                <h1>The Registry of Rights on Movable Assets</h1>
                 <h3>Saudi Arabia's online site for searching and filing
                     notices of
                     pledge in movable property
@@ -69,10 +103,10 @@
         <div class="row text-center">
             <div class="col-md-4 mb-5">
                 <div class="panel" style="border-color: #2c2a6b;">
-                    <h2 style="background-color: #74348a; color: white" class="panel-heading ">Create an Account</h2>
+                    <h2 style="background-color: #2c2a6b; color: white" class="panel-heading ">Create an Account</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">In order to register notices or
                         obtain certified search results, you must first establish an online account with the Registry of
-                        Securing Interests in Movable Property. </p>
+                        Rights on Movable Assets. </p>
                     <button type="button" a href="./public/setupaccount.aspx" class="btn center-block"
                         style="margin-bottom: 5px; background-color: #2c2a6b; color: white">Create</button>
                 </div>
@@ -97,7 +131,8 @@
                 <div class="panel" style="border-color: #2c2a6b;">
                     <h2 style="background-color: #2c2a6b; color: white" class="panel-heading">Contact Support</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you have questions or need help
-                        with navigating the website, you may contact the Tech Support Desk. The Tech Support Desk will review your query and respond within a short time.
+                        with navigating the website, you may contact the Tech Support Desk. The Tech Support Desk will
+                        review your query and respond within a short time.
                     </p>
                     <button type="button" a href="/public/techsupport.aspx" class="btn center-block"
                         style="margin-bottom: 5px; background-color: #2c2a6b; color: white;">Contact</a>
@@ -107,15 +142,29 @@
         </div>
         <!-- Row Ends -->
 
-
     </div>
     <!-- Container Ends -->
     <!-- Footer Begins -->
-    <footer class="text-right" style="background-color: #2c2a6b;">
-        <img src="./images/Asset 1.png" alt="SBC White Logo">
+    <footer style="background-color: #2c2a6b;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 img-responsive"><img style="max-height: 100px;" class="img-responsive"
+                        src="./images/موؤسسة النقد Logo.png" alt=""></div>
+                <div class="col-md-4 img-responsive"><img style="max-height: 100px;" class="img-responsive"
+                        src="./images/وزارة العدل Logo.png" alt=""></div>
+                <div class="col-md-4 img-responsive"><img style="max-height: 100px;" class="img-responsive"
+                        src="./images/وزارة-التجارة-Logo-transparent.png" alt=""></div>
+            </div>
+        </div>
     </footer>
     <!-- Footer Ends -->
 
+
+
+
+
+
+    
 </body>
 
 </html>
