--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light" style="background-color: #74348A;">
+    <nav class="navbar navbar-light" style="background-color: #FFFFFF;">
         <ul style="list-style: none;">
             <li>English | Arabic </li>
             <li><img src="./images/Asset 1.png" alt="SBC"></li>
@@ -43,9 +43,9 @@
         <!-- H Row End -->
 
         <!-- Text Row -->
-        <div class="card text-white my-5 py-4 text-center" style="background-color: #522e7b">
+        <div class="card text-white my-5 py-4 text-center" style="background-color: #2c2a6b">
             <div class="card-body">
-                <p class="text-white m-0">The Registry of Rights on Movable Property provides the convenient services of searching, registering, and
+                <p class="text-white m-0">The Registry of Rights on Movable Assets provides the convenient services of searching, registering, and
                     managing notices of security interest. Please see below for quick access to the main features. For
                     more assistance, please view the Help section or the How To Guides accessible in the top navigation
                     menu.
@@ -65,14 +65,14 @@
                             into the Registry of Rights on Movable Assets and to perform a certified search.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="./public/setupaccount.aspx" class="btn btn-outline-dark">Create</a>
+                        <button class="btn btn-outline-dark mx-auto d-block"><a href="./public/setupaccount.aspx">Create</a></button>
                     </div>
                 </div>
             </div>
             <!-- Col Ends -->
             <!-- Col Begins -->
             <div class="col-md-4 mb-5">
-                <div class="card h-100">
+                <div style="border-color: #2c2a6b" class="card h-100">
                     <div class="card-body" style="color: #2c2a6b">
                         <h2 class="card-title">Search the Registry</h2>
                         <p class="card-text">Types of searches include: security provider, vehicle registration number,
@@ -80,7 +80,7 @@
                             registration number, and verification of a certified search.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="./str/search.aspx?public=true#!/" class="btn btn-outline-dark">Search</a>
+                        <button style="background-color: #2c2a6b; color: white" class="btn mx-auto d-block"><a href="./str/search.aspx?public=true#!/">Search</a></button>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
             <!-- Col Begins -->
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
-                    <div class="card-body">
+                    <div class="card-body" style="color: 2c2a6b">
                         <h2 class="card-title">Contact Support</h2>
                         <p class="card-text">For questions or advice regarding the use of the registry, please contact
                             the Saudi Arabia Support Team.</p>
