--- a/bootstap3.html
+++ b/bootstap3.html
@@ -14,85 +14,65 @@
 </head>
 
 <body>
-    <nav class="navbar" style="background-color: white;">
-        <p class="pull-right" style="margin: 20px">English | <span
-                style="color: #2c2a6b; text-decoration: underline;">Arabic </span></p>
+    <nav class="navbar">
+        <p class="pull-right">English | <span style="color: #2c2a6b; text-decoration: underline;">Arabic </span></p>
         <div>
             <ul style="list-style: none;" class="list-inline">
                 <li class="pull-left" style="margin-left: 120px; color: #2c2a6b">
                     <h2>سجل الحقوق مع الممتلكات المنقولة</h2>
                     <h2>Registry of Rights on Movable Assets</h2>
                 </li>
-                <li class="pull-right"><img src="./images/master logo.png" alt="SBC"></li>
+                <li class="pull-right mb-2"><img src="./images/master logo.png" alt="SBC"></li>
             </ul>
         </div>
-        <!-- <div class="text-left list-inline">
-            <h2>سجل الحقوق مع الممتلكات المنقولة</h2>
-            <h2>Registry of Securing Interests in Movable Property</h2>
-        </div> -->
     </nav>
-    <nav class="navbar navbar-default" style="color: white; background-color: #2c2a6b;">
-        <div class="container-fluid ">
-          <div class="collapse navbar-collapse ">
-            <ul class="nav navbar-nav">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Public Search</a></li>
-              <li><a href="#">Help</a></li>
-              <li><a href="#">How To Guides</a></li>
-              <li><a href="#">Law and Regulations</a></li>
-              <li><a href="#">Create Account</a></li>
-              <li><a href="#">Log In</a></li>
-            </ul>
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
-      </nav>
 
-    <!-- <div style="background-color: #2c2a6b; height: 40px; color: white"> -->
-    
-    <!-- <nav class="navbar">
-        <div class="container-fluid">
-            <div class="collapse navbar-collapse align-items-center">
-                <ul style="padding: 10px;" class="nav navbar-nav">
-                    <li>Home</li>
-                    <li>Public Search</li>
-                    <li>Help</li>
-                    <li>How To Guides</li>
-                    <li>Law and Regulations</li>
-                    <li>Create Account</li>
-                    <li>Log In</li>
+    <nav class="navbar" style="background-color: #2c2a6b;">
+        <div class="container-fluid ">
+            <div class="collapse navbar-collapse ">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Public Search</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">How To Guides</a></li>
+                    <li><a href="#">Law and Regulations</a></li>
+                    <li><a href="#">Create Account</a></li>
+                    <li><a href="#">Log In</a></li>
                 </ul>
-            </div>
-        </div>
-    </nav> -->
-</div>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    </div>
     <!-- Page Content -->
-    <div class="container">
+    <!-- <div class="container"> -->
+    <div style="margin: 10px">
         <!-- Heading Row -->
         <div class="row align-items-center" style="margin-top: 10px">
-            <div style="color: #2c2a6b; margin-top: 50px" class="col-lg-6">
+            <div class="col-lg-1"></div>
+            <div style="color: #2c2a6b; margin-top: 50px" class="col-lg-5">
                 <h1>The Registry of Rights on Movable Assets</h1>
-                <h3>Saudi Arabia's online site for searching and filing
+                <h2>Saudi Arabia's online site for searching and filing
                     notices of
                     pledge in movable property
-                </h3>
+                </h2>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-5">
                 <img class="img-thumbnail" src="./images/SAmonitors.jpg" alt="Computer">
             </div>
         </div>
+        <div class="col-lg-1"></div>
         <br>
         <!-- H Row End -->
 
         <!-- Text Row -->
-        <div class="row align-items-center my-5">
+        <div class="row align-items-center text-center">
             <div class="panel" style="background-color:#2c2a6b">
                 <div class="panel-body">
-                    <p style="color: white">This website is where you find the Registry of Securing Interests in Movable
-                        Property (RSIMP). It is where you will register notices of security interest in movable property
+                    <p style="color: white">This website is where you find the Registry of Rights on Movable Assets. It
+                        is where you will register notices of security interest in movable property
                         (Collateral), and search for existing notices of security interests. In order to register
                         notices or obtain certified search results, you must first establish an online account with the
-                        Registry of Securing Interests in Movable Property. After submitting the account
-                        application, you will receive an email to verify and activate the account.
+                        Registry of Rights on Movable Assets.
                     </p>
                 </div>
             </div>
@@ -101,7 +81,7 @@
 
         <!-- Content Row -->
         <div class="row text-center">
-            <div class="col-md-4 mb-5">
+            <div class="col-md-4">
                 <div class="panel" style="border-color: #2c2a6b;">
                     <h2 style="background-color: #2c2a6b; color: white" class="panel-heading ">Create an Account</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">In order to register notices or
@@ -114,7 +94,7 @@
             <!-- Col Ends -->
 
             <!-- Col Begins -->
-            <div class="col-md-4 mb-5">
+            <div class="col-md-4">
                 <div class="panel" style="border-color: #2c2a6b;">
                     <h2 style="background-color: #2c2a6b; color: white" class="panel-heading">Public Search</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">Anyone can search the registry to
@@ -127,7 +107,7 @@
             <!-- Col Ends -->
 
             <!-- Col Begins -->
-            <div class="col-md-4 mb-5">
+            <div class="col-md-4">
                 <div class="panel" style="border-color: #2c2a6b;">
                     <h2 style="background-color: #2c2a6b; color: white" class="panel-heading">Contact Support</h2>
                     <p class="panel-body" style="min-height: 110px; color: #2c2a6b">If you have questions or need help
@@ -141,20 +121,27 @@
             <!-- Col Ends -->
         </div>
         <!-- Row Ends -->
-
     </div>
+
+    <!-- </div> -->
     <!-- Container Ends -->
     <!-- Footer Begins -->
-    <footer style="background-color: #2c2a6b;">
+    <footer style="background-color: white; border-top: solid 3px #2c2a6b;">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 img-responsive"><img style="max-height: 100px;" class="img-responsive"
-                        src="./images/موؤسسة النقد Logo.png" alt=""></div>
-                <div class="col-md-4 img-responsive"><img style="max-height: 100px;" class="img-responsive"
-                        src="./images/وزارة العدل Logo.png" alt=""></div>
-                <div class="col-md-4 img-responsive"><img style="max-height: 100px;" class="img-responsive"
-                        src="./images/وزارة-التجارة-Logo-transparent.png" alt=""></div>
+                <p class="text-center" style="color: #2c2a6b"><strong>Unified Number:&nbsp;199077 from 8:00 am to 4:00
+                        pm From Sunday to Thursday&nbsp;</strong></p>
+
+                <ul class="list-unstyled">
+                    <li class="col-md-2"></li>
+                    <li class="col-md-4" style="margin-top:25px;"><img class="img-responsive center-block"
+                            src="./images/موؤسسة النقد Logo.png" /></li>
+                    <li class="col-md-4"><img class="img-responsive center-block"
+                            src="./images/وزارة-التجارة-Logo-transparent.png" /></li>
+                    <li class="col-md-2"></li>
+                </ul>
             </div>
+
         </div>
     </footer>
     <!-- Footer Ends -->
@@ -164,7 +151,10 @@
 
 
 
-    
+
+
+
+
 </body>
 
 </html>
