--- a/bootstap3.html
+++ b/bootstap3.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Heading Begins -->
     <nav class="navbar">
         <p class="pull-right">English | <span style="color: #2c2a6b; text-decoration: underline;">Arabic </span></p>
         <div>
@@ -26,6 +27,7 @@
             </ul>
         </div>
     </nav>
+    <!-- Nav Bar Begins -->
 
     <nav class="navbar" style="background-color: #2c2a6b;">
         <div class="container-fluid ">
@@ -39,12 +41,12 @@
                     <li><a href="#">Create Account</a></li>
                     <li><a href="#">Log In</a></li>
                 </ul>
-            </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+            </div>
+        </div>
     </nav>
     </div>
-    <!-- Page Content -->
-    <!-- <div class="container"> -->
+    <!-- Page Content Begins-->
+   
     <div style="margin: 10px">
         <!-- Heading Row -->
         <div class="row align-items-center" style="margin-top: 10px">
@@ -123,37 +125,24 @@
         <!-- Row Ends -->
     </div>
 
-    <!-- </div> -->
-    <!-- Container Ends -->
     <!-- Footer Begins -->
     <footer style="background-color: white; border-top: solid 3px #2c2a6b;">
-        <div class="container">
-            <div class="row">
-                <p class="text-center" style="color: #2c2a6b"><strong>Unified Number:&nbsp;199077 from 8:00 am to 4:00
+        <div class="container"> 
+                <p class="text-center" style="color: #2c2a6b; padding: 10px"><strong>Unified Number:&nbsp;199077 from 8:00 am to 4:00
                         pm From Sunday to Thursday&nbsp;</strong></p>
-
+        <div class="row">
                 <ul class="list-unstyled">
                     <li class="col-md-2"></li>
-                    <li class="col-md-4" style="margin-top:25px;"><img class="img-responsive center-block"
+                    <li class="col-md-4" style="margin-top: 50px;"><img class="img-responsive center-block"
                             src="./images/موؤسسة النقد Logo.png" /></li>
                     <li class="col-md-4"><img class="img-responsive center-block"
                             src="./images/وزارة-التجارة-Logo-transparent.png" /></li>
                     <li class="col-md-2"></li>
                 </ul>
             </div>
-
         </div>
     </footer>
     <!-- Footer Ends -->
-
-
-
-
-
-
-
-
-
 
 </body>
 
