--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-light" style="background-color: #FFFFFF;">
         <ul style="list-style: none;">
             <li>English | Arabic </li>
-            <li><img src="./images/Asset 1.png" alt="SBC"></li>
+            <li><img src="./images/master logo.png" alt="SBC"></li>
         </ul>
 
     </nav>
@@ -30,9 +30,9 @@
         <div class="row align-items-center my-5">
             <div class="col-lg-6">
                 <!-- <h1 class="font-italic font-weight-light">Welcome to<h1></h1> -->
-                    <h1 style="color: #2c2a6b">The Registry of Securing Interests in Movable Property</h1>
-                    <h3 style="color:#2c2a6b" class=" font-weight-light">The Kingdom of Saudi Arabia's electronic collateral
-                        registry.</h3>
+                <h1 style="color: #2c2a6b">The Registry of Securing Interests in Movable Property</h1>
+                <h3 style="color:#2c2a6b" class=" font-weight-light">The Kingdom of Saudi Arabia's electronic collateral
+                    registry.</h3>
             </div>
 
             <div class="col-lg-6">
@@ -45,7 +45,8 @@
         <!-- Text Row -->
         <div class="card text-white my-5 py-4 text-center" style="background-color: #2c2a6b">
             <div class="card-body">
-                <p class="text-white m-0">The Registry of Rights on Movable Assets provides the convenient services of searching, registering, and
+                <p class="text-white m-0">The Registry of Rights on Movable Assets provides the convenient services of
+                    searching, registering, and
                     managing notices of security interest. Please see below for quick access to the main features. For
                     more assistance, please view the Help section or the How To Guides accessible in the top navigation
                     menu.
@@ -57,7 +58,7 @@
         <!-- Content Row -->
         <div class="row">
             <div class="col-md-4 mb-5">
-                <div class="card h-100">
+                <div style="border-color: #2c2a6b" class="card h-100">
                     <div class="card-body" style="color: #2c2a6b">
                         <h2 class="card-title">Create an Account</h2>
                         <p class="card-text">Accounts are free, and are required before registering notices of security
@@ -65,7 +66,8 @@
                             into the Registry of Rights on Movable Assets and to perform a certified search.</p>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-outline-dark mx-auto d-block"><a href="./public/setupaccount.aspx">Create</a></button>
+                        <button style="background-color: #2c2a6b;" class="btn mx-auto d-block"><a
+                                href="./public/setupaccount.aspx" class="text-white">Create</a></button>
                     </div>
                 </div>
             </div>
@@ -80,21 +82,24 @@
                             registration number, and verification of a certified search.</p>
                     </div>
                     <div class="card-footer">
-                        <button style="background-color: #2c2a6b; color: white" class="btn mx-auto d-block"><a href="./str/search.aspx?public=true#!/">Search</a></button>
+                        <button style="background-color: #2c2a6b;" class="btn mx-auto d-block"><a
+                                href="./str/search.aspx?public=true#!/" class="text-white">Search</a></button>
                     </div>
                 </div>
             </div>
             <!-- Col Ends -->
             <!-- Col Begins -->
             <div class="col-md-4 mb-5">
-                <div class="card h-100">
-                    <div class="card-body" style="color: 2c2a6b">
+                <div style="border-color: #2c2a6b" class="card h-100">
+                    <div class="card-body" style="color: #2c2a6b">
                         <h2 class="card-title">Contact Support</h2>
                         <p class="card-text">For questions or advice regarding the use of the registry, please contact
                             the Saudi Arabia Support Team.</p>
                     </div>
                     <div class="card-footer">
-                        <a href="/public/techsupport.aspx" class="btn btn-outline-dark">Contact</a>
+                        <button style="background-color: #2c2a6b;" class="mx-auto btn d-block">
+                        <a href="/public/techsupport.aspx" class="text-white">Contact</a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -107,11 +112,8 @@
     <!-- Container Ends -->
 
     <!-- Footer -->
-    <footer style="background-color: #74348A">
-        <div class="container text-center">
-            <img src="./images/SA White Logo.png" alt="SBC Symbol">
-            <p class="m-0 text-right text-white">Copyright &copy; Paradigm Applications 2020</p>
-        </div>
+    <footer style="border-top: solid #2c2a6b 3px">
+        <!-- <img class="img-fluid mx-auto" src="./images/وزارة-التجارة-Logo-transparent.png" alt="MCI Symbol"> -->
     </footer>
     <!-- F Ends -->
 
